@startuml
title Class Diagram - Use Case: Đăng ký tài khoản
skinparam classAttributeIconSize 0

class AuthController {
  + showRegisterForm(): String
  + processRegister(dto: RegisterRequest): String
  + verifyEmail(token: String): String
  + completeProfile(dto: ProfileRequest): String
}

class AuthService {
  + register(dto: RegisterRequest): User
  + verifyToken(token: String): boolean
  + resendVerificationEmail(email: String): void
  + completeUserProfile(userId: Long, dto: ProfileRequest): Customer
}

class EmailService {
  + sendVerificationEmail(email: String, token: String): void
}

class User {
  - id: Long
  - email: String
  - passwordHash: String
  - status: AccountStatus
  - provider: AuthProvider
  + getEmail(): String
  + setStatus(status: AccountStatus): void
}

class VerificationToken {
  - id: Long
  - token: String
  - expiryDate: LocalDateTime
  - isUsed: boolean
  - user: User
  + isValid(): boolean
  + markAsUsed(): void
}

class Customer {
  - id: Long
  - fullName: String
  - gender: String
  - dob: LocalDate
  - phone: String
  - user: User
}

class Address {
  - id: Long
  - street: String
  - city: String
  - isDefault: boolean
  - customer: Customer
}

enum AccountStatus {
  PENDING
  ACTIVE
  BLOCKED
}

enum AuthProvider {
  LOCAL
  GOOGLE
}

AuthController --> AuthService : uses
AuthService --> EmailService : uses
AuthService ..> User : creates/updates
AuthService ..> VerificationToken : creates
AuthService ..> Customer : creates
AuthService ..> Address : creates

VerificationToken "0..*" -- "1" User : belongs to
Customer "1" -- "1" User : maps to
Customer "1" -- "1..*" Address : has

@enduml